encrypt-pre-alpha/chains/solana/program-sdk/dsl/tests/compile_fail/missing_else.stderr
error: else required
 --> tests/compile_fail/missing_else.rs:8:13
  |
8 |     let x = if flag { a };
  |             ^^^^^^^^^^^^^
